I think I made some final changes